[workspace]
members = [
    "ontio-std",
    "ontio-codegen",
    "examples",
    "examples/token",
    "examples/token-codegen",
    "examples/oep5token",
    "examples/helloworld",
    "examples/basictest",
    "examples/helloworld2",
    "examples/abigen",
    "examples/apitest",
    "examples/fibtest",
    "examples/token-codegen2",
]

[profile.release]
panic = "abort"
lto = true
debug = true
opt-level = "s"

